deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: p-deployment
  labels:
    app: portfolioo141
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolioo141
  template:
    metadata:
      labels: 
        app: portfolioo141
    spec:
      containers:
        - name: portfolioo141
          image: hieu18022004/portfolioo141:2026-03-31-4a904f2
          ports:
            - containerPort: 3000
          #resources restriction
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m"
          #health check
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
